tests/semantic_errors/err06_return_missing_val.java
public class Error06 {
    public static int test() {
        return; // Error: Method must return a value
    }
    public static void main(String[] args) {
    }
}
